--- a/404.md
+++ b/404.md
@@ -4,8 +4,8 @@ toc: false
 
 # Page not found
 
-Whoops, we can't find this page...
+If you typed the web address, check it is correct.
 
-## `<(_ _)>`
+If you pasted the web address, check you copied the entire address.
 
-Sorry.
+If the web address is correct or you selected a link or button, contact the Foundation For Public Code secretariat so we'll be able to help you out.
